Name:        graph
Version:     0.1
Synopsis:    graph
Description: graph
Homepage:    https://github.com/zkf/sissypath/
Author:      Bjørnar Hansen <tilbjornar _ gmail>
Build-type:          Simple
Cabal-version:       >=1.8

Extra-source-files:    tests/Tests.hs

Library
--  Main-is:       Main.hs
  Hs-source-dirs:  src
  Exposed-modules: Data.UndirectedGraph.Internal
                   Data.UndirectedGraph
                   Data.UndirectedGraph.Path.Bruteforce
                   Data.UndirectedGraph.Path.Random
                   Data.UndirectedGraph.Path.Dijkstra
                   Data.UndirectedGraph.Path.UCB1
  Other-modules:   Data.UndirectedGraph.RandomUtil
  Ghc-options:    -Wall
  Build-depends: base, mtl, MonadRandom, MonadRandomLazy, vector, random, containers,
                 PSQueue, list-extras

Test-suite tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: tests
  Main-is:        Tests.hs
  Build-depends:  base, HUnit, test-framework, test-framework-hunit,
                  MonadRandom, vector, containers, graph
  Ghc-options:    -Wall
